[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/UI/gunSelector.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/gameFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes_and_scripts/components/stage/GunReplacingUI.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/UI/StageTouchscreenUI/touchscreenSwitchGunLeft.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/UI/StageTouchscreenUI/touchscreenSwitchGunLeftPressed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 49
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63, 30 )

[node name="GunReplacingUI" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 4 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cent" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vert" type="VBoxContainer" parent="cent"]
margin_top = 34.0
margin_right = 1280.0
margin_bottom = 686.0
custom_constants/separation = 82
alignment = 1

[node name="warningText" type="Label" parent="cent/vert"]
margin_right = 1280.0
margin_bottom = 200.0
rect_min_size = Vector2( 1280, 200 )
rect_pivot_offset = Vector2( 257, 0 )
custom_fonts/font = SubResource( 1 )
text = "STAGE_REPLACE_GUN_UI_WARNING"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="horiz" type="HBoxContainer" parent="cent/vert"]
margin_top = 282.0
margin_right = 1280.0
margin_bottom = 372.0
custom_constants/separation = 300
alignment = 1

[node name="slot1" type="ColorRect" parent="cent/vert/horiz"]
margin_left = 338.0
margin_right = 490.0
margin_bottom = 90.0
rect_min_size = Vector2( 152, 90 )
rect_pivot_offset = Vector2( -816, -184 )
color = Color( 0.517647, 0.517647, 0.517647, 0.478431 )

[node name="gunSprite" type="TextureRect" parent="cent/vert/horiz/slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 152, 90 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selector" type="VBoxContainer" parent="cent/vert/horiz/slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -94.0
margin_right = 1.0
margin_bottom = 1.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGunSprite" type="TextureRect" parent="cent/vert/horiz/slot1/selector"]
margin_right = 154.0
margin_bottom = 90.0
rect_min_size = Vector2( 152, 90 )
expand = true
stretch_mode = 6

[node name="sprite" type="NinePatchRect" parent="cent/vert/horiz/slot1/selector"]
margin_top = 94.0
margin_right = 154.0
margin_bottom = 185.0
rect_min_size = Vector2( 152, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot2" type="ColorRect" parent="cent/vert/horiz"]
margin_left = 790.0
margin_right = 942.0
margin_bottom = 90.0
rect_min_size = Vector2( 152, 90 )
color = Color( 0.517647, 0.517647, 0.517647, 0.478431 )

[node name="gunSprite" type="TextureRect" parent="cent/vert/horiz/slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selector" type="VBoxContainer" parent="cent/vert/horiz/slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -94.0
margin_right = 1.0
margin_bottom = 1.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGunSprite" type="TextureRect" parent="cent/vert/horiz/slot2/selector"]
margin_right = 154.0
margin_bottom = 90.0
rect_min_size = Vector2( 152, 90 )
expand = true
stretch_mode = 6

[node name="sprite" type="NinePatchRect" parent="cent/vert/horiz/slot2/selector"]
margin_top = 94.0
margin_right = 154.0
margin_bottom = 185.0
rect_min_size = Vector2( 152, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mobile" type="VBoxContainer" parent="cent/vert"]
margin_top = 454.0
margin_right = 1280.0
margin_bottom = 514.0

[node name="mobileButtons" type="HBoxContainer" parent="cent/vert/mobile"]
margin_right = 1280.0
margin_bottom = 60.0
custom_constants/separation = 150
alignment = 1

[node name="left" type="Control" parent="cent/vert/mobile/mobileButtons"]
margin_left = 323.0
margin_right = 449.0
margin_bottom = 60.0
rect_min_size = Vector2( 126, 60 )
rect_pivot_offset = Vector2( -277, -64 )

[node name="switchGunLeftButton" type="TouchScreenButton" parent="cent/vert/mobile/mobileButtons/left"]
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
shape = SubResource( 2 )
action = "ui_selectWeapon0"

[node name="Button" type="Button" parent="cent/vert/mobile/mobileButtons"]
margin_left = 599.0
margin_right = 681.0
margin_bottom = 60.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
text = "OK"

[node name="right" type="Control" parent="cent/vert/mobile/mobileButtons"]
margin_left = 831.0
margin_right = 957.0
margin_bottom = 60.0
rect_min_size = Vector2( 126, 60 )
rect_pivot_offset = Vector2( -277, -64 )

[node name="switchGunLeftButton" type="TouchScreenButton" parent="cent/vert/mobile/mobileButtons/right"]
position = Vector2( 122, 0 )
scale = Vector2( -1, 1 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
shape = SubResource( 2 )
action = "ui_selectWeapon1"

[node name="centralizer" type="HBoxContainer" parent="cent/vert"]
margin_top = 596.0
margin_right = 1280.0
margin_bottom = 652.0
alignment = 1

[node name="discardButton" type="Button" parent="cent/vert/centralizer"]
margin_left = 116.0
margin_right = 1163.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "STAGE_REPLACE_GUN_UI_DISCARD_BUTTON"

[connection signal="pressed" from="cent/vert/mobile/mobileButtons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="cent/vert/centralizer/discardButton" to="." method="_on_discardButton_pressed"]
